05/1/2021_23h_mai_up list parking slot

--- a/sprint2-frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/sprint2-frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -27,7 +27,7 @@
 					<a href="#" class="dropdown-item" [routerLink]="['/employee/ticket-management']">
 						<span><i class="fa fa-id-card-o"></i> Quản lý vé</span>
 					</a>
-					<a href="#" class="dropdown-item" [routerLink]="['/employee/parking-lot-management']">
+					<a class="dropdown-item" [routerLink]="['/admin/list-parking-slot']">
 						<span><i class="fa fa-building-o"></i> Quản lý bãi đỗ</span>
 					</a>
 <!--					<a href="#" class="dropdown-item" [routerLink]="['/employee/sales-management']">-->
