--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -47,14 +47,14 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a href="#">
+				<a [routerLink]="['/admin/list-parking-slot']">
 					<span><i class="fa fa-building-o"></i> Quản lý bãi đỗ</span>
 				</a>
 			</h2>
 		</div>
 	</div>
-	
-	
+
+
 	<div class="card">
 		<div class="card-header" >
 			<h2 class="mb-0">
