--- a/sprint2-frontend/src/app/app-admin/parking-slot/list-parking-slot/list-parking-slot.component.html
+++ b/sprint2-frontend/src/app/app-admin/parking-slot/list-parking-slot/list-parking-slot.component.html
@@ -3,15 +3,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Danh sách vị trí xe trong bãi ô tô</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-        crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <div class="container p-0">
@@ -26,7 +20,7 @@
         </div>
         <div class="row m-0">
           <div class="col-2 mt-3 m-0 p-0">
-            <a href="#" class="btn btn-success" [routerLink]="['/create-parking-slot']">
+            <a href="#" class="btn btn-success" [routerLink]="['/admin/create-parking-slot']">
               <i class="material-icons">&#xE147;</i>
               <span>Thêm mới vị trí </span></a>
           </div>
@@ -38,8 +32,8 @@
                    [(ngModel)]="keywordSearch" style="width: 150px">
           </div>
           <div class="col-2 m-0 p-0 mt-3">
-            <button class="fa fa-search btn btn-success m-0 ml-2" ></button>
-            <button class="fas fa-undo-alt btn btn-success m-0 ml-1" ></button>
+            <button class="fa fa-search btn btn-success m-0 ml-2" (click)="searchFloor()"></button>
+            <button class="fas fa-undo-alt btn btn-success m-0 ml-1" (click)="resetSearch()"></button>
           </div>
         </div>
       </div>
@@ -47,14 +41,14 @@
         <thead>
         <tr>
           <th>STT</th>
-          <th>Tầng</th>
-          <th>Vị Trí</th>
-          <th>Tình Trạng</th>
+          <th (click)="sort('floor')">Tầng</th>
+          <th (click)="sort('slotNumber')">Vị trí</th>
+          <th (click)="sort('reserved')">Tình trạng</th>
           <th>Thao tác</th>
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let parkingSlot of list
+        <tr *ngFor="let parkingSlot of list | orderBy: key : reverse
                                             |paginate: { itemsPerPage: 5, currentPage: p}
                                              let i = index">
           <td>
@@ -68,8 +62,8 @@
             <span *ngIf="parkingSlot.reserved == 1">Đã đăng ký</span>
           </td>
           <td>
-            <a class="detail" (click)="openViewDialog(parkingSlot.id)" ><i class="material-icons text-info" title="Detail">remove_red_eye</i></a>
-            <a class="edit"  [routerLink]="['edit-parking-slot/'+ parkingSlot.id]" ><i class="material-icons text-warning" title="Edit">&#xE254;</i></a>
+            <i class="material-icons text-info" title="Detail">remove_red_eye</i>
+            <i class="material-icons text-warning" title="Edit">&#xE254;</i>
             <i class="material-icons text-danger" title="Delete">&#xE872;</i>
           </td>
         </tr>
@@ -78,26 +72,15 @@
       <div *ngIf="checkList === 'false'">
         <h1 class="text-danger text-center">Không tìm thấy kết quả</h1>
         <div align="center">
-          <button class="btn btn-primary mt-8[8/................
-          3 mb-3" >Quay Lại</button>
+          <button class="btn btn-primary mt-3 mb-3" (click)="resetSearch()">Quay Lại</button>
         </div>
       </div>
 
-      <div align="right" *ngIf="this.list.length !== 0">
+      <div align="center" *ngIf="this.list.length !== 0">
         <pagination-controls (click)="changePage(p)" (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"
                              responsive="true"></pagination-controls>
       </div>
     </div>
   </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
 </body>
-
