--- a/sprint2-frontend/src/app/app.component.html
+++ b/sprint2-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
-<div class="container-fluid mt-4 mx-auto">
+<div class="container-fluid mt-2">
 	<div class="row">
-		<div class="col-lg-3 mx-auto">
+		<div class="col-lg-3 mx-auto mt-4">
 			<app-side-bar></app-side-bar>
 		</div>
 		<div class="col-lg-9 mx-auto">
