--- a/sprint2-frontend/src/app/shared/footer/footer.component.css
+++ b/sprint2-frontend/src/app/shared/footer/footer.component.css
@@ -7,13 +7,13 @@ footer .copyright {
 /*footer .copyright span {*/
 /*    color: blue;*/
 /*}*/
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    height: 10%;
-    width: 100%;
-    color: blue;
-    text-align: center;
-}
+/*footer {*/
+/*    position: fixed;*/
+/*    left: 0;*/
+/*    bottom: 0;*/
+/*    height: 10%;*/
+/*    width: 100%;*/
+/*    color: blue;*/
+/*    text-align: center;*/
+/*}*/
 
