update routerLink app-employee-routing.module.ts, nav-bar.component.html, side-bar.component.html

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -20,7 +20,7 @@
 	<div class="card">
 		<div class="card-header" >
 			<h2 class="mb-0">
-				<a href="#">
+				<a href="#" [routerLink]="['/employee/registered-car-list']">
 					<span><i class="fa fa-car"></i> Quản lý xe đã đăng ký</span>
 				</a>
 			</h2>
