update 6/1 merge-mai

--- a/sprint2-frontend/src/app/app-employee/camera/camera-management/camera-management.component.css
+++ b/sprint2-frontend/src/app/app-employee/camera/camera-management/camera-management.component.css
@@ -10,9 +10,9 @@
 }
 #image{
   position: absolute;
-  bottom: 30px;
+  bottom: 50px;
   left: -370px;
-  height: 430px;
+  height: 490px;
   width: 940px;
 }
 #divInput{
@@ -20,7 +20,7 @@
   position: absolute;
   /*height: 20%;*/
   /*bottom: -30px;*/
-  left: -165px
+  left: -165px;
 }
 
 #formFileLg {
