--- a/sprint2-frontend/src/app/app-employee/camera/camera-management/camera-management.component.html
+++ b/sprint2-frontend/src/app/app-employee/camera/camera-management/camera-management.component.html
@@ -1,7 +1,7 @@
 <div id="background">
   <div id="main">
     <p class="text-danger" id="message" [innerHtml]='msg' *ngIf="msg"></p>
-    <img id="image" accept=".jpg,.png,.gif" [src]="url" *ngIf="url" alt="">
+    <img id="image" accept=".jpg,.png,.gif" [src]="url" *ngIf="url" alt=""><br><br>
     <div  id="divInput">
       <label id="label" style="margin-left: 60px" for="formFileLg" class=" label form-label text-danger test">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera-video-fill" viewBox="0 0 16 16">
