--- a/sprint2-frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/sprint2-frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -30,6 +30,9 @@
 					<a class="dropdown-item" [routerLink]="['/admin/list-parking-slot']">
 						<span><i class="fa fa-building-o"></i> Quản lý bãi đỗ</span>
 					</a>
+          <a href="#" class="dropdown-item" [routerLink]="['/employee/member-card-list']">
+            <span><i class="fa fa-id-card-o"></i> Quản lý thẻ thành viên</span>
+          </a>
 <!--					<a href="#" class="dropdown-item" [routerLink]="['/employee/sales-management']">-->
 <!--						<span><i class="fa fa-dollar"></i> Quản lý thu chi</span>-->
 <!--					</a>-->
