--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -1,77 +1,86 @@
 <div class="accordion mb-2" id="accordionParkingManagement">
-	<div class="card">
-		<div class="card-header">
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-address-book-o"></i> Quản lý nhân viên</span>
-				</a>
-			</h2>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header">
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-users"></i> Quản lý khách hàng</span>
-				</a>
-			</h2>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header" >
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-car"></i> Quản lý xe đã đăng ký</span>
-				</a>
-			</h2>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header">
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
-				</a>
-			</h2>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header">
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-id-card-o"></i> Quản lý vé</span>
-				</a>
-			</h2>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header">
-			<h2 class="mb-0">
-				<a [routerLink]="['/admin/list-parking-slot']">
-					<span><i class="fa fa-building-o"></i> Quản lý bãi đỗ</span>
-				</a>
-			</h2>
-		</div>
-	</div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-address-book-o"></i> Quản lý nhân viên</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-users"></i> Quản lý khách hàng</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-car"></i> Quản lý xe đã đăng ký</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-id-card-o"></i> Quản lý vé</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a [routerLink]="['/admin/list-parking-slot']">
+          <span><i class="fa fa-building-o"></i> Quản lý bãi đỗ</span>
+        </a>
+      </h2>
+    </div>
+  </div>
 
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a [routerLink]="['/employee/member-card-list']">
+          <span><i class="fa fa-id-card-o"></i> Quản lý thẻ thành viên</span>
+        </a>
+      </h2>
+    </div>
+  </div>
 
-	<div class="card">
-		<div class="card-header" >
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-dollar"></i> Quản lý thu chi</span>
-				</a>
-			</h2>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header" >
-			<h2 class="mb-0">
-				<a href="#">
-					<span><i class="fa fa-bar-chart"></i> Thống kê</span>
-				</a>
-			</h2>
-		</div>
-	</div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-dollar"></i> Quản lý thu chi</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="mb-0">
+        <a href="#">
+          <span><i class="fa fa-bar-chart"></i> Thống kê</span>
+        </a>
+      </h2>
+    </div>
+  </div>
 
 </div>
