--- a/sprint2-frontend/src/app/app-employee/entry-management/parking-map/parking-map.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/parking-map/parking-map.component.html
@@ -1,1 +1,369 @@
-<p>parking-map works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Bản đồ bãi đỗ xe</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        crossorigin="anonymous">
+  <link rel="stylesheet" href="parking-lot.css">
+  <link rel="stylesheet" href="global.css">
+</head>
+<body style="background-image: url('https://www.ubudu.com/wp-content/uploads/2016/10/parking.jpg')">
+<!--navbar-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="#" class="navbar-brand"><b>QUẢN LÝ BÃI ĐỖ XE Ô TÔ</b></a>
+  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <!-- Collection of nav links, forms, and other content for toggling -->
+  <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+    <div class="navbar-nav ml-auto">
+
+    </div>
+    <div class="navbar-nav ml-auto">
+      <div class="nav-item dropdown login-dropdown">
+        <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle"><i
+          class="fa fa-user-o"></i> Nguyễn Văn A</a>
+        <div class="dropdown-menu">
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-address-book-o" ></i> Quản lý nhân viên</span>
+          </a>
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-users" ></i> Quản lý khách hàng</span>
+          </a>
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-car"></i> Quản lý xe đã đăng ký</span>
+          </a>
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
+          </a>
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-dollar"></i> Quản lý thu chi</span>
+          </a>
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-bar-chart"></i> Thống kê</span> </a>
+          <a href="#" class="dropdown-item">
+            <span><i class="fa fa-sign-out"></i> Đăng xuất</span>
+          </a>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<!--Sidebar + Table-->
+<div class="container-fluid mt-4 mx-auto">
+  <div class="row">
+    <div class="col-lg-3 mx-auto">
+      <!--Sidebar-->
+      <div class="accordion mb-2" id="accordionParkingManagement">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h2 class="mb-0">
+              <a href="#">
+                <span><i class="fa fa-address-book-o"></i> Quản lý nhân viên</span>
+              </a>
+            </h2>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h2 class="mb-0">
+              <a href="#">
+                <span><i class="fa fa-user"></i> Quản lý khách hàng</span>
+              </a>
+            </h2>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h2 class="mb-0">
+              <a href="#">
+                <span><i class="fa fa-car"></i> Quản lý xe đã đăng ký</span>
+              </a>
+            </h2>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFour">
+            <h2 class="mb-0">
+              <a href="#">
+                <span><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
+              </a>
+            </h2>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFive">
+            <h2 class="mb-0">
+              <a href="#">
+                <span><i class="fa fa-dollar"></i> Quản lý thu chi</span>
+              </a>
+            </h2>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingSix">
+            <h2 class="mb-0">
+              <a href="#">
+                <span><i class="fa fa-bar-chart"></i> Thống kê</span>
+              </a>
+            </h2>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="col-lg-9 mx-auto">
+      <!--parking lot-->
+      <div class="container-fluid bg-white">
+        <div class="row">
+          <div class="col-12 border border-dark p-2">
+            <div class="row mb-5">
+              <div class="col-6 d-flex justify-content-start">
+                <span class="d-flex justify-content-center" id="entrance">Cửa vào</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-1 col-sm-1"></div>
+              <div class="col-md-2 col-sm-3">
+                <div class="col-parking d-flex">
+                  <div class="col-odd">
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                  </div>
+                  <div class="col-even">
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2 col-sm-3">
+                <div class="col-parking d-flex">
+                  <div class="col-odd">
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                  </div>
+                  <div class="col-even">
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2 col-sm-4">
+                <div class="col-parking d-flex">
+                  <div class="col-odd">
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                  </div>
+                  <div class="col-even">
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2 col-sm-3">
+                <div class="col-parking d-flex">
+                  <div class="col-odd">
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                  </div>
+                  <div class="col-even">
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2 col-sm-3">
+                <div class="col-parking d-flex">
+                  <div class="col-odd">
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                    <div class="slot-odd d-flex justify-content-center align-items-center"><span
+                      class="odd-member">1</span>
+                    </div>
+                  </div>
+                  <div class="col-even">
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                    <div class="slot-even d-flex justify-content-center align-items-center"><span
+                      class="even-member">2</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-1 col-sm-1"></div>
+            </div>
+            <div class="row mt-5">
+              <div class="col-6">Số chỗ trống: 50</div>
+              <div class="col-6 d-flex justify-content-end">
+                <span class="d-flex justify-content-center" id="exit">Cửa ra</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--    pagination-->
+        <div class="row">
+          <div class="col-12 border border-dark border-top-0 pt-1">
+            <ul class="pagination">
+              <li class="page-item">Bản đồ tầng:</li>
+              <li class="page-item"><a href="#" class="page-link"><<</a></li>
+              <li class="page-item"><a href="#" class="page-link"><</a></li>
+              <li class="page-item"><a href="#" class="page-link">1</a></li>
+              <li class="page-item"><a href="#" class="page-link">2</a></li>
+              <li class="page-item active"><a href="#" class="page-link">3</a></li>
+              <li class="page-item"><a href="#" class="page-link">4</a></li>
+              <li class="page-item"><a href="#" class="page-link">5</a></li>
+              <li class="page-item"><a href="#" class="page-link">></a></li>
+              <li class="page-item"><a href="#" class="page-link">>></a></li>
+            </ul>
+          </div>
+        </div>
+        <!--    pagination end-->
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--script-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
+</body>
+</html>
