chau_lp up 15h07 06/01

--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.html
@@ -8,6 +8,12 @@
   <p>Đã có lỗi xảy ra.</p>
   <p>Quý khách vui lòng liên hệ nhân viên để khắc phục sự cố. Mong quý khách thông cảm! Xin cảm ơn!</p>
 </div>
+<div *ngIf="message == 'MoMo fail'">
+  <img src="https://i.imgur.com/Hfy1RjF.jpg" alt="icon">
+  <p>Hệ thống tích hợp thanh toán bằng <span id="momo">MoMo</span> hiện đang bảo trì.</p>
+  <p id="message">Quý khách vui lòng thanh toán bằng <span id="paypal">PayPal</span> hoặc liên hệ nhân viên để gia hạn.
+    Mong quý khách thông cảm! Xin cảm ơn!</p>
+</div>
 <br>
 <div class="row d-flex justify-content-end">
   <button mat-dialog-close class="btn btn-primary mr-3">OK</button>
