update 6/1 xong nhat + quan 1/2

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -29,7 +29,7 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a href="#">
+				<a routerLink="/employee/entry-view">
 					<span><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
 				</a>
 			</h2>
