--- a/sprint2-frontend/src/app/app-employee/camera/camera-management/camera-management.component.css
+++ b/sprint2-frontend/src/app/app-employee/camera/camera-management/camera-management.component.css
@@ -1,7 +1,7 @@
 #background{
   background-color: black;
-  width: 100%;
-  height: 100vh
+  width: 450px;
+  height: 300px;
 }
 #main{
   position: absolute;
@@ -10,24 +10,27 @@
 }
 #image{
   position: absolute;
-  bottom: 50px;
-  left: -370px;
-  height: 490px;
-  width: 940px;
+  bottom: 161px;
+  height: 192px;
+  right: 42px;
+  width: 398px;
 }
 #divInput{
   text-align:center;
   position: absolute;
   /*height: 20%;*/
   /*bottom: -30px;*/
-  left: -165px;
+  left: -485px;
 }
 
 #formFileLg {
-  left: 55px;
   background:black;
-  font-size:24px;
+  font-size:14px;
   font-weight:bold;
+  width: 273px;
+  bottom: 86px;
+  position: relative;
+  right: 111px;
   /*-webkit-animation: my 700ms infinite;*/
   /*-moz-animation: my 700ms infinite;*/
   /*-o-animation: my 700ms infinite;*/
@@ -46,8 +49,11 @@
 }
 
 #label {
-  background:black;
-  font-size:24px;
+  position: absolute;
+  right: 147px;
+  bottom: 112px;
+  width: 181px;
+  font-size:14px;
   font-weight:bold;
   -webkit-animation: glowing 1500ms infinite;
   -moz-animation: glowing 1500ms infinite;
@@ -58,12 +64,11 @@
 #message {
   padding: 0;
   margin: 0;
-  width: 800px;
   position: absolute;
-  bottom: 225px;
-  left: -260px;
-  background:black;
-  font-size:84px;
+  bottom: 231px;
+  left: -134px;
+  background: black;
+  font-size: 37px;
   font-weight:bold;
   -webkit-animation: glowing 1500ms infinite;
   -moz-animation: glowing 1500ms infinite;
@@ -72,15 +77,16 @@
 }
 
 .input {
+  height: 50%;
+  width: 350px;
   color: black;
   background:black;
-  font-size:24px;
+  font-size:7px;
   font-weight:bold;
   -webkit-animation: my 700ms infinite;
   -moz-animation: my 700ms infinite;
   -o-animation: my 700ms infinite;
   animation: my 700ms infinite;
-  margin-left: 30px
 }
 
 @-webkit-keyframes my {
