nq_khanh up front end 7/1/2021

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -73,5 +73,14 @@
 			</h2>
 		</div>
 	</div>
+  <div class="card">
+    <div class="card-header" >
+      <h2 class="mb-0">
+        <a href="#" routerLink="/">
+          <span><i class="fa fa-bar-chart"></i> Thống kê</span>
+        </a>
+      </h2>
+    </div>
+  </div>
 
 </div>
