update 7/1 merge khanh_nq

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -76,11 +76,28 @@
   <div class="card">
     <div class="card-header" >
       <h2 class="mb-0">
-        <a href="#" routerLink="/">
-          <span><i class="fa fa-bar-chart"></i> Thống kê</span>
+        <a routerLink="/customer/changePassword">
+          <span><i class="fa fa-bar-chart"></i> Đổi mật khẩu</span>
         </a>
       </h2>
     </div>
   </div>
-
+  <div class="card">
+    <div class="card-header" >
+      <h2 class="mb-0">
+        <a routerLink="/customer/carList">
+          <span><i class="fa fa-bar-chart"></i> Danh sách xe cá nhân</span>
+        </a>
+      </h2>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" >
+      <h2 class="mb-0">
+        <a routerLink="/customer/historyPayment">
+          <span><i class="fa fa-bar-chart"></i> Lịch sử thanh toán</span>
+        </a>
+      </h2>
+    </div>
+  </div>
 </div>
