--- a/sprint2-frontend/src/styles.css
+++ b/sprint2-frontend/src/styles.css
@@ -1,5 +1,5 @@
 @import "~bootstrap/dist/css/bootstrap.css";
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 .app-full-bleed-dialog .mat-dialog-container {
   padding: 0;
 }
