danh_nq 07/1 'statistic not report'

--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-car/statistic-car.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-car/statistic-car.component.html
@@ -1,1 +1,28 @@
-<p>statistic-car works!</p>
+<div class="statistics-overview">
+  <div class="p-5 mr-0">
+    <div class="statistics-integrated row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 border">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-4">
+            <div class="row">
+              <div class="col-lg-7 col-md-7 col-sm-7 col-xl-7">
+              </div>
+              <div class="col-lg-5 col-md-5 col-sm-5 col-xl-5">
+                <button class="btn btn-primary mr-2" style="margin-left: 105px">Xem báo cáo</button>
+                <button class="btn btn-dark ">Xuất báo cáo</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-4">
+            <div>
+              <canvas id="statistic-car" style="position: relative; height:41vh; width:50vw"></canvas>
+            </div>
+            <button class="btn btn-success mb-3" mat-dialog-close style="margin-left: 850px">Đóng</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
