--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-customer/statistic-customer.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-customer/statistic-customer.component.html
@@ -1,1 +1,47 @@
-<p>statistic-customer works!</p>
+<div class="statistics-overview">
+  <div class="statistics p-2 mx-auto bg-light">
+    <button class="pcx" routerLink="/admin/statistic-overview">Tổng hợp</button>
+    <button class="pcx" routerLink="/admin/statistic-ticket">Thống kê vé</button>
+    <button class="pcx" routerLink="/admin/statistic-revenue">Thống kê doanh thu</button>
+    <button class="pcx" routerLink="/admin/statistic-customer-register">Thống kê số lượng khách hàng</button>
+  </div>
+  <div class="statistics bg-light">
+    <form [formGroup]="formStatisticCustomerRegisterPeriod" (ngSubmit)="openStatisticCustomerRegisterPeriod()">
+      <div class="row">
+        <div class="col-lg-7 col-md-7 col-sm-7 col-xl-7 ">
+
+          <mat-form-field color="accent" appearance="fill" class="mr-2">
+            <mat-label>Ngày bắt đầu (*)</mat-label>
+            <input matInput [matDatepicker]="picker1" formControlName="fromDay">
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+
+          <mat-form-field color="accent" appearance="fill">
+            <mat-label>Ngày kết thúc (*)</mat-label>
+            <input matInput [matDatepicker]="picker2" formControlName="toDay">
+            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-datepicker #picker2 color="primary"></mat-datepicker>
+          </mat-form-field>
+
+        </div>
+
+        <div class="col-lg-5 col-md-5 col-sm-5" style="padding-top: 22px">
+          <button type="submit" class="btn btn-success mr-2">Xem thống kê</button>
+          <button class="btn btn-primary mr-2">Xem báo cáo</button>
+          <button class="btn btn-dark ">Xuất báo cáo</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="mr-0">
+    <div class="integrated-statistics row container-fluid p-0 m-0">
+      <div class="row">
+        <div>
+          <canvas id="statistic-customer" style="position: relative; height:70vh; width:70vw"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
