--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-sales/statistic-sales.component.html
@@ -1,1 +1,59 @@
-<p>statistic-sales works!</p>
+<div class="statistics-overview">
+  <div class="statistics p-2 mx-auto bg-light">
+    <button class="pcx" routerLink="/admin/statistic-overview">Tổng hợp</button>
+    <button class="pcx" routerLink="/admin/statistic-ticket">Thống kê vé</button>
+    <button class="pcx" routerLink="/admin/statistic-revenue">Thống kê doanh thu</button>
+    <button class="pcx" routerLink="/admin/statistic-customer-register">Thống kê số lượng khách hàng</button>
+  </div>
+  <form [formGroup]="formStatisticRevenuePeriod" (ngSubmit)="openStatisticRevenuePeriod()">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 ">
+
+        <mat-form-field color="accent" appearance="fill" class="mr-2">
+          <mat-label>Ngày bắt đầu (*)</mat-label>
+          <input matInput [matDatepicker]="picker1" formControlName="fromDayPayment">
+          <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+          <mat-datepicker #picker1></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field color="accent" appearance="fill" class="mr-2">
+          <mat-label>Ngày kết thúc (*)</mat-label>
+          <input matInput [matDatepicker]="picker2" formControlName="toDayPayment">
+          <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+          <mat-datepicker #picker2 color="primary"></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Thống kê</mat-label>
+          <mat-select formControlName="typeReport">
+            <mat-option *ngFor="let value of typeReports" [value]="value.value">
+              {{value.valueView}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 p-3 d-flex justify-content-end">
+        <button type="submit" class="btn btn-success mr-2">Xem thống kê</button>
+        <button class="btn btn-primary mr-2">Xem báo cáo</button>
+        <button class="btn btn-dark ">Xuất báo cáo</button>
+      </div>
+    </div>
+  </form>
+
+</div>
+<div class="statistics mr-0">
+  <div class=" row container-fluid p-0 m-0">
+    <div class=" row mr-2">
+      <div *ngIf="typeReport ==='reMemberCard'">
+        <canvas id="statistic-revenue-member-card" style="position: relative; height:60vh; width:70vw"></canvas>
+      </div>
+      <div *ngIf="typeReport ==='reTicket'">
+        <canvas id="statistic-revenue-ticket" style="position: relative; height:60vh; width:70vw"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
