--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
@@ -1,1 +1,76 @@
-<p>statistic-ticket works!</p>
+<div class="statistics-overview">
+  <div class="statistics p-2 mx-auto bg-light">
+    <button class="pcx" routerLink="/admin/statistic-overview">Tổng hợp</button>
+    <button class="pcx" routerLink="/admin/statistic-ticket">Thống kê vé</button>
+    <button class="pcx" routerLink="/admin/statistic-revenue">Thống kê doanh thu</button>
+    <button class="pcx" routerLink="/admin/statistic-customer-register">Thống kê số lượng khách hàng</button>
+  </div>
+  <form [formGroup]="formStatisticMemberCard" (ngSubmit)="openStatisticMemberCard()">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
+
+        <mat-form-field appearance="fill" class="mr-2">
+          <mat-label>Loại thống kê (*)</mat-label>
+          <mat-select formControlName="typeReport">
+            <mat-option *ngFor="let value of typeReports" [value]="value.value">
+              {{value.valueView}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="mr-2">
+          <mat-label>Chọn tuần (*)</mat-label>
+          <mat-select formControlName="week" [disabled]="formStatisticMemberCard.controls.typeReport.value === 'month'
+          || formStatisticMemberCard.controls.typeReport.value === 'year'">
+            <mat-option *ngFor="let value of weekParams" [value]="value.value">
+              {{value.valueView}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="mr-2">
+          <mat-label>Chọn tháng (*)</mat-label>
+          <mat-select formControlName="month" [disabled]="formStatisticMemberCard.controls.typeReport.value === 'year'">
+            <mat-option *ngFor="let value of monthParams" [value]="value.value">
+              {{value.valueView}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Chọn năm (*)</mat-label>
+          <mat-select formControlName="year">
+            <mat-option *ngFor="let value of yearParams" [value]="value.value">
+              {{value.valueView}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 p-3 d-flex justify-content-end">
+        <button type="submit" class="btn btn-success mr-2">Xem thống kê</button>
+        <button class="btn btn-primary mr-2">Xem báo cáo</button>
+        <button class="btn btn-dark ">Xuất báo cáo</button>
+      </div>
+    </div>
+  </form>
+
+</div>
+<div class="statistics mr-0">
+  <div class=" row container-fluid p-0 m-0">
+    <div class=" row mr-2">
+      <div *ngIf="typeReport === 'week'">
+        <canvas id="statistic-member-card-week" style="position: relative; height:60vh; width:70vw"></canvas>
+      </div>
+      <div *ngIf="typeReport === 'month'">
+        <canvas id="statistic-member-card-month" style="position: relative; height:60vh; width:70vw"></canvas>
+      </div>
+      <div *ngIf="typeReport === 'year'">
+        <canvas id="statistic-member-card-year" style="position: relative; height:60vh; width:70vw"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
