--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -67,7 +67,7 @@
 	<div class="card">
 		<div class="card-header" >
 			<h2 class="mb-0">
-				<a href="#">
+				<a routerLink="/admin/statistic-overview">
 					<span><i class="fa fa-bar-chart"></i> Thống kê</span>
 				</a>
 			</h2>
