--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
 	<div class="card">
 		<div class="card-header">
 			<h2 class="mb-0">
-				<a href="#">
+				<a href="#" [routerLink]="['/admin/employee-list']">
 					<span><i class="fa fa-address-book-o"></i> Quản lý nhân viên</span>
 				</a>
 			</h2>
@@ -53,8 +53,8 @@
 			</h2>
 		</div>
 	</div>
-	
-	
+
+
 	<div class="card">
 		<div class="card-header" >
 			<h2 class="mb-0">
@@ -73,5 +73,4 @@
 			</h2>
 		</div>
 	</div>
-
 </div>
