--- a/sprint2-frontend/src/app/app-admin/employee-management/employee-edit/employee-edit.component.html
+++ b/sprint2-frontend/src/app/app-admin/employee-management/employee-edit/employee-edit.component.html
@@ -1,1 +1,85 @@
-<p>employee-edit works!</p>
+<div class="container-fluid ">
+  <!--  <div class=" border rounded-lg p-3 my-5 ">-->
+  <form [formGroup]="formEditUser">
+    <h3 class="row d-flex justify-content-center">Thêm thành viên </h3>
+    <hr>
+
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Họ và tên <sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <input type="text" min="1" class="form-control form-control-sm" formControlName="fullName" required>
+      </div>
+    </div>
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Địa chỉ:<sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <textarea rows="1" type="text" min="1" class="form-control form-control-sm" formControlName="address" required></textarea>
+      </div>
+    </div>
+
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Số điện thoại:<sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <input type="text"  class="form-control form-control-sm" formControlName="phoneNumber" required>
+      </div>
+    </div>
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Giới tính:<sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <select class="form-control d-flex justify-content-start" formControlName="gender" required="">
+          <option [value]=true>Nam</option>
+          <option [value]=false>Nữ</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Cấp bậc:<sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <select class="form-control d-flex justify-content-start" formControlName="position">
+          <option value="Nhân Viên Giữ Xe">Nhân Viên Giữ Xe</option>
+          <option value="Nhân Viên">Bảo Vệ</option>
+          <option value="Nhân Viên">Nhân Viên Bảo Trì</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-3 col-form-label">Email <sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <input type="text" min="1" class="form-control form-control-sm" formControlName="email">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-3 col-form-label">Ngày sinh <sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <!--        <mat-form-field>-->
+        <input type="date" class="form-control form-control-sm" formControlName="birthday" >
+        <!--          <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>-->
+        <!--          <mat-datepicker #myDatepicker></mat-datepicker>-->
+        <!--        </mat-form-field>-->
+      </div>
+    </div>
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Tên đăng nhập <sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <input type="text" class="form-control form-control-sm" formControlName="userName" required>
+      </div>
+
+    </div>
+    <div class="form-group row ">
+      <label class="col-sm-3 col-form-label">Mật khẩu <sup class="text-danger">*</sup> </label>
+      <div class="col-sm-8">
+        <input type="password" class="form-control form-control-sm" formControlName="password" required>
+      </div>
+    </div>
+
+
+    <div class="row d-flex justify-content-center ml-4">
+      <div>
+        <button class="btn btn-secondary btn btn-sm" style="width: 80px" [mat-dialog-close]="">Hủy</button>
+        <button type="submit" class="btn btn-success btn btn-sm mx-4" style="width: 90px">Thêm mới</button>
+      </div>
+    </div>
+  </form>
+  <!--  </div>-->
+</div>
+
