--- a/sprint2-frontend/src/app/app-admin/employee-management/employee-list/employee-list.component.html
+++ b/sprint2-frontend/src/app/app-admin/employee-management/employee-list/employee-list.component.html
@@ -1,1 +1,61 @@
-<p>employee-list works!</p>
+<div class="col-lg-12 mx-auto">
+  <div class="table-responsive">
+    <div class="table-wrapper">
+      <div class="table-title">
+        <div class="row">
+          <div class="col-sm-12 col-xl-12 col-lg-12 col-md-12">
+            <h2><b>DANH SÁCH NHÂN VIÊN</b></h2>
+          </div>
+        </div>
+
+        <div class="row col-sm-12 col-xl-12">
+          <div class="col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-bottom">
+            <a href="#" class="btn btn-success" data-toggle="modal"   (click)="openDialogCreate()"><i
+              class="material-icons">&#xE147; </i><span>Thêm Mới Nhân Viên</span></a>
+          </div>
+          <div class="col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-end form-inline">
+            <input type="text" class="form-control form-control-sm rounded "
+                   placeholder="Nhập từ khóa tìm kiếm">
+            <button type="button" class="search btn btn-info">
+              <i class="fa fa-search"></i></button>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="checkList">
+        <table class=" table table-striped table-hover text-center">
+          <thead>
+          <tr>
+            <th>STT</th>
+            <th >Họ Và Tên</th>
+            <th>Ngày Sinh</th>
+            <th>Chức Vụ</th>
+            <th>Điện Thoại</th>
+            <th>Tác vụ</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let employee of list" >
+            <td>{{employee.id}}</td>
+            <td>{{employee.fullName}}</td>
+            <td>{{employee.birthday | date:'dd/MM/yyyy'}}</td>
+            <td>{{employee.position}}</td>
+            <td>{{employee.phoneNumber}}</td>
+            <td>
+              <a class="text-info" ><i class="material-icons" data-toggle="tooltip" title="Xem">remove_red_eye</i></a>
+              <a class="text-warning" ><i class="material-icons" data-toggle="tooltip" title="Sửa" (click)="openDialogEdit(employee.id)" >edit</i></a>
+              <a class="text-danger" ><i class="material-icons" data-toggle="tooltip" title="Xoá" (click)="openDialogDelete(employee.id)">delete</i></a>
+            </td>
+
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  $(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+  });
+</script>
+
