complete parking management

--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -1,112 +1,144 @@
 <!--quản lí xe ra vào-->
 <div class="container-fluid bg-white p-4">
-  <!--    car image and time-->
-  <div class="row">
-    <div class="col-md-6 col-sm-12">
-      <div class="row d-flex justify-content-center">
-        <h1>Xe vào</h1>
-      </div>
-      <div class="row">
+  <form (ngSubmit)="onSubmit()" [formGroup]="ticketForm">
+    <!--    car image and time-->
+    <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <div class="row d-flex justify-content-center">
+          <h1>Xe vào</h1>
+        </div>
+        <div class="row">
           <app-camera-management></app-camera-management>
-      </div>
-      <div class="row form-group mt-2">
-        <div class="col-6">
-          <label>Thời gian vào</label>
-          <input type="text" class="form-control" placeholder="Qua angular nhúng" required="required">
         </div>
-        <div class="col-6">
-          <label>Ngày</label>
-          <input type="date" class="form-control" placeholder="Ngày" required="required">
+        <div class="row form-group mt-2">
+          <div class="col-12">
+            <mat-form-field class="example-full-width">
+              <mat-label>Ngày giờ vào</mat-label>
+              <input matInput type="datetime-local" formControlName="enterDate">
+            </mat-form-field>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-6 col-sm-12">
-      <div class="row d-flex justify-content-center">
-        <h1>Xe ra</h1>
-      </div>
-      <div class="row">
-        <app-camera-management></app-camera-management>
-      </div>
-      <div class="row form-group mt-2">
-        <div class="col-6">
-          <label>Thời gian ra</label>
-          <input type="text" class="form-control" placeholder="Qua angular nhúng" required="required">
+      <div class="col-md-6 col-sm-12">
+        <div class="row d-flex justify-content-center">
+          <h1>Xe ra</h1>
         </div>
-        <div class="col-6">
-          <label>Ngày</label>
-          <input type="date" class="form-control" placeholder="Ngày" required="required">
+        <div class="row">
+          <app-camera-management></app-camera-management>
+        </div>
+        <div class="row form-group mt-2">
+          <div class="col-12">
+            <mat-form-field class="example-full-width">
+              <mat-label>Ngày giờ ra</mat-label>
+              <input matInput type="datetime-local" formControlName="exitDate">
+            </mat-form-field>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-3 mb-2">
-      <input type="text" class="form-control" placeholder="Biển số xe">
-    </div>
-    <div class="col-6">
-      <button class="btn btn-primary">Tìm xe</button>
-      <button class="btn btn-primary">Bản đồ</button>
-    </div>
-    <div class="col-3">
-      <input type="text" class="form-control" placeholder="Tổng tiền">
-    </div>
-  </div>
-  <!--    car image and time end-->
-  <!--form-->
-  <div class="row">
-    <div class="col-3">
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Họ tên">
-        </div>
+    <div class="row">
+      <div class="col-3 mb-2">
+        <mat-form-field class="example-full-width">
+          <mat-label>Biển số xe</mat-label>
+          <input matInput formControlName="plateNumber">
+          <mat-error *ngIf="ticketForm.get('plateNumber').hasError('required')">Vui lòng nhập biển số</mat-error>
+        </mat-form-field>
       </div>
-      <div class="row mt-2">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Tầng">
-        </div>
+      <div class="col-6">
+        <a class="btn btn-primary" (click)="findCar()">Tìm xe</a>
+        <button class="btn btn-primary" routerLink="/employee/parking-map">Bản đồ</button>
+      </div>
+      <div class="col-3">
+        <mat-error>{{message}}</mat-error>
       </div>
     </div>
-    <div class="col-3">
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Email">
+    <!--    car image and time end-->
+    <!--form-->
+    <div class="row">
+      <div class="col-3">
+        <div class="row">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Họ tên</mat-label>
+              <input matInput formControlName="fullName">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Tầng</mat-label>
+              <input matInput formControlName="floor" readonly>
+            </mat-form-field>
+          </div>
         </div>
       </div>
-      <div class="row mt-2">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Vị trí đỗ">
+      <div class="col-3">
+        <div class="row">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Email</mat-label>
+              <input matInput formControlName="email">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Vị trí đỗ</mat-label>
+              <input matInput formControlName="slot" readonly>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="row">
+          <div class="col">
+            <mat-form-field>
+              <mat-label>Loại xe</mat-label>
+              <mat-select formControlName="carType" [compareWith]="compareType">
+                <mat-option *ngFor="let type of carTypes" [value]="type.carTypeName">
+                  {{type.carTypeName}}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="ticketForm.get('carType').hasError('required')">Vui lòng chọn loại xe</mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Ngày bắt đầu</mat-label>
+              <input matInput formControlName="beginDate">
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="row">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Tổng tiền</mat-label>
+              <input matInput formControlName="price">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col">
+            <mat-form-field class="example-full-width">
+              <mat-label>Ngày kết thúc</mat-label>
+              <input matInput formControlName="endDate">
+            </mat-form-field>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-3">
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Loại xe">
-        </div>
-      </div>
-      <div class="row mt-2">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Ngày bắt đầu">
-        </div>
+    <div class="row mt-2 d-flex justify-content-end">
+      <div class="col-3 d-flex justify-content-end">
+        <button class="btn btn-primary">Xếp chỗ</button>
+        <a class="btn btn-primary" (click)="checkout()">Rời bãi</a>
       </div>
     </div>
-    <div class="col-3">
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Biển số">
-        </div>
-      </div>
-      <div class="row mt-2">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Ngày kết thúc">
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row mt-2 d-flex justify-content-end">
-    <div class="col-3 d-flex justify-content-end">
-      <button class="btn btn-primary">Lưu thông tin</button>
-    </div>
-  </div>
+  </form>
   <!--    form end-->
 </div>
