07/1/2021_15h_mai_update focus

--- a/sprint2-frontend/src/app/app-admin/parking-slot/create-parking-slot/create-parking-slot.component.html
+++ b/sprint2-frontend/src/app/app-admin/parking-slot/create-parking-slot/create-parking-slot.component.html
@@ -11,7 +11,7 @@
     <div class="col-sm-1"></div>
     <div class="signup-form col-sm-10">
       <form [formGroup]="formCreateNew" (keydown)="keyDownFunction($event)">
-        <h2>Thêm mới vị trí</h2> 
+        <h2>Thêm mới vị trí</h2>
         <div class="form-row">
           <div class="col-sm-1 col-xs-1 col-md-1 col-lg-1 p-0 m-0"></div>
           <div class="col-sm-2 col-xs-2 col-md-2 col-lg-2 p-0 m-0 mt-2">
@@ -21,21 +21,21 @@
             <input class="form-control" type="text"
                    formControlName="floor"/>
 
-            <p class="text-danger" style=" margin-left: -29%;"
+            <p class="text-danger" style=" margin-left: -30%;"
                *ngIf="formCreateNew.get('floor').hasError('required')
                                       && (formCreateNew.controls.floor?.dirty
                                       || formCreateNew.controls.floor?.touched)">
               Vui lòng nhập số tầng.
             </p>
 
-            <p class="text-danger" style=" margin-left: -5%;"
+            <p class="text-danger" style=" margin-left: -49%;"
                *ngIf="formCreateNew.get('floor').hasError('pattern')
                                       && (formCreateNew.controls.floor?.dirty
                                       || formCreateNew.controls.floor?.touched)">
-              Số tầng phải là số.
+              Số tầng phải là số dương.
             </p>
 
-            <p class="text-danger" style=" margin-left: -80%;"
+            <p class="text-danger" style=" margin-left: -82%;"
                *ngIf="formCreateNew.get('floor').hasError('max')
                                       && (formCreateNew.controls.floor?.dirty
                                       || formCreateNew.controls.floor?.touched)">
@@ -59,18 +59,18 @@
           </div>
           <div class="col-sm-2 col-xs-2 col-md-2 col-lg-2 p-0 m-0">
             <input class="form-control" type="text" formControlName="slotNumber"/>
-            <p class="text-danger" style="margin-left: -11%;"
+            <p class="text-danger" style="margin-left: -15%;"
                *ngIf="formCreateNew.get('slotNumber').hasError('required')
                                       && (formCreateNew.controls.slotNumber?.dirty
                                       || formCreateNew.controls.slotNumber?.touched)">
               Vui lòng nhập vị trí.
             </p>
 
-            <p class="text-danger" style=" margin-left: 12%;"
+            <p class="text-danger" style=" margin-left: -30%;"
                *ngIf="formCreateNew.get('slotNumber').hasError('pattern')
                                       && (formCreateNew.controls.slotNumber?.dirty
                                       || formCreateNew.controls.slotNumber?.touched)">
-              Vị trí phải là số.
+              Vị trí phải là số dương.
             </p>
 
             <p class="text-danger" style=" margin-left: -77%;"
@@ -109,10 +109,10 @@
         <div class="form-row mt-4">
           <div class="col-sm-4"></div>
           <div class="col-sm-2 mt-3">
-            <button type="submit" class="btn btn-secondary" [routerLink]="['/admin/list-parking-slot']">Quay Lại</button>
+            <button type="button" class="btn btn-secondary" [routerLink]="['/admin/list-parking-slot']">Quay Lại</button>
           </div>
           <div class="col-sm-2 mt-3">
-            <button type="submit" class="btn btn-success" (click)="createParkingSlot()">Thêm Mới</button>
+            <button type="button" class="btn btn-success" (click)="createParkingSlot()">Thêm Mới</button>
           </div>
           <div class="col-sm-4"></div>
         </div>
